tambah role, permission dan user

--- a/management-ui/yo/app/views/main.html
+++ b/management-ui/yo/app/views/main.html
@@ -1,8 +1,7 @@
 <div class="jumbotron">
-  <h1>Rumah Sakit</h1>
+  <h1>Sistem Antrian Loket</h1>
   <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+    <img src="images/logo.png" alt="I'm Yeoman" /><br>
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+  <p>RS.Dr.H.Marzoeki Mahdi Bogor</p>
 </div>
