--- a/management-ui/yo/app/views/master/poli.html
+++ b/management-ui/yo/app/views/master/poli.html
@@ -1,1 +1,115 @@
-<p>This is the poli view.</p>
+<div class="row">
+    <div class="container">
+        <ul class="breadcrumb">
+            <li><span style="color: orangered;">Master</span></li>
+            <li class="active">Poli</li>
+        </ul>
+    </div>
+</div>
+<div class="row">
+    <div class="container">
+        <center>
+            <uib-alert type="{{typeAlert}}" ng-show="alert">{{messageAlert}}</uib-alert>
+        </center>
+    </div>
+</div>
+<div class="row">
+    <div class="container">
+        <table class="table table-bordered table-hover">
+            <thead class="header-custom">
+                <tr>
+                    <th>
+                        Code
+                    </th>
+                    <th>
+                        Name
+                    </th>
+                    <th class="col-sm-2 center">
+                        <button class="btn btn-success" ng-click="showModalInputPoli()" tooltip-placement="bottom" uib-tooltip="Add New Poli"><i class="glyphicon glyphicon-plus"></i></button>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="x in listPoli">
+                    <td>{{x.code}}</td>
+                    <td>{{x.name}}</td>
+                    <td class="col-xs-1 center">
+                        <a class="glyphicon glyphicon-edit" ng-click="edit(x)" tooltip-placement="bottom" uib-tooltip="Edit {{x.name}}"></a>
+                        <a class="glyphicon glyphicon-remove" ng-click="showDialogDelete(x)" tooltip-placement="bottom" uib-tooltip="Delete {{x.name}}"></a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <div align="center">
+            <uib-pagination total-items="paging.totalItems" 
+                            ng-model="paging.currentPage" 
+                            max-size="paging.maxPage" 
+                            class="pagination-sm" 
+                            ng-change="reloadPage()" 
+                            boundary-links="true"
+                            items-per-page="paging.itemsPerPage">    
+            </uib-pagination>
+        </div>
+        <div align="center">
+            <pre>Page: {{paging.currentPage}} / {{paging.maxPage}}</pre>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Add New Permission -->
+<div class="modal fade bs-example-modal-sm" id="modalAddPoli" tabindex="-1" role="dialog" data-backdrop="static">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header header-custom">
+                <button type="button" class="close" ng-click="hideModalInputPoli()" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Form Input Poli</h4>
+            </div>
+            <div class="modal-body">
+                <form name="formPoli">
+                    <div class="form-horizontal">
+                        <div class="form-group" ng-class="{'has-error':formPoli.code.$invalid, 'has-success':formPoli.code.$valid}">
+                            <div class="col-sm-4">
+                                <label for="code" class="control-label">Code</label>
+                            </div>
+                            <div class="col-sm-8">
+                                <input name="code" type="text" class="form-control" ng-model="currentPoli.code" required />
+                                <span style="float:right; color:white" class="help-block label label-danger" ng-show="validateCode">Poli Code Already Exist</span>
+                            </div>
+                        </div>
+                        <div class="form-group" ng-class="{'has-error':formPoli.name.$invalid, 'has-success':formPoli.name.$valid}">
+                            <div class="col-sm-4">
+                                <label for="name" class="control-label">Name</label>
+                            </div>
+                            <div class="col-sm-8">
+                                <input name="name" type="text" class="form-control" ng-model="currentPoli.name" required />
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-default" ng-click="hideModalInputPoli()">Cancel</button>
+                <button class="btn btn-primary" ng-click="save()" ng-disabled="formPoli.$invalid">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Confirm Delete -->
+<div class="modal fade bs-example-modal-sm" id="modalConfirmDelete" tabindex="-1" role="dialog" data-backdrop="static">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header header-custom">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Confirm Delete [{{codeDelete}}]</h4>
+            </div>
+            <div class="modal-body">
+                Are you sure ?
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-default" data-dismiss="modal">No</button>
+                <button class="btn btn-primary" ng-click="remove(idPoli)">Yes</button>
+            </div>
+        </div>
+    </div>
+</div>
