--- a/management-ui/yo/app/views/master/category.html
+++ b/management-ui/yo/app/views/master/category.html
@@ -27,7 +27,7 @@
                     <th>
                         Title
                     </th>
-                    <th class="col-sm-2 center">
+                    <th class="col-sm-2 text-center">
                         <button class="btn btn-success" ng-click="showModalInputCategory()" tooltip-placement="bottom" uib-tooltip="Add New Category"><i class="glyphicon glyphicon-plus"></i></button>
                     </th>
                 </tr>
@@ -37,7 +37,7 @@
                     <td>{{x.code}}</td>
                     <td>{{x.name}}</td>
                     <td>{{x.title}}</td>
-                    <td class="col-xs-1 center">
+                    <td class="col-sm-2 text-center">
                         <a class="glyphicon glyphicon-edit" ng-click="edit(x)" tooltip-placement="bottom" uib-tooltip="Edit {{x.name}}"></a>
                         <a class="glyphicon glyphicon-remove" ng-click="showDialogDelete(x)" tooltip-placement="bottom" uib-tooltip="Delete {{x.name}}"></a>
                     </td>
