--- a/management-ui/yo/app/views/master/loket.html
+++ b/management-ui/yo/app/views/master/loket.html
@@ -1,1 +1,116 @@
-<p>This is the loket view.</p>
+<div class="row">
+    <div class="container">
+        <ul class="breadcrumb">
+            <li><span style="color: orangered;">Master</span></li>
+            <li class="active">Loket</li>
+        </ul>
+    </div>
+</div>
+<div class="row">
+    <div class="container">
+        <center>
+            <uib-alert type="{{typeAlert}}" ng-show="alert">{{messageAlert}}</uib-alert>
+        </center>
+    </div>
+</div>
+<div class="row">
+    <div class="container">
+        <table class="table table-bordered table-hover">
+            <thead class="header-custom">
+                <tr>
+                    <th>
+                        Nomor
+                    </th>
+                    <th>
+                        Kategori
+                    </th>
+                    <th class="col-sm-2 text-center">
+                        <button class="btn btn-success" ng-click="showModalInputLoket()" tooltip-placement="bottom" uib-tooltip="Add New Loket"><i class="glyphicon glyphicon-plus"></i></button>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="x in listLoket">
+                    <td>{{x.nomorLoket}}</td>
+                    <td>{{x.kategori.code}} - {{x.kategori.name}}</td>
+                    <td class="col-sm-2 text-center">
+                        <a class="glyphicon glyphicon-edit" ng-click="edit(x)" tooltip-placement="bottom" uib-tooltip="Edit {{x.nomorLoket}}"></a>
+                        <a class="glyphicon glyphicon-remove" ng-click="showDialogDelete(x)" tooltip-placement="bottom" uib-tooltip="Delete {{x.nomorLoket}}"></a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <div align="center">
+            <uib-pagination total-items="paging.totalItems" ng-model="paging.currentPage" max-size="paging.maxPage" class="pagination-sm"
+                ng-change="reloadPage()" boundary-links="true" items-per-page="paging.itemsPerPage">
+            </uib-pagination>
+        </div>
+        <div align="center">
+            <pre>Page: {{paging.currentPage}} / {{paging.maxPage}}</pre>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Add New Permission -->
+<div class="modal fade bs-example-modal-sm" id="modalAddLoket" tabindex="-1" role="dialog" data-backdrop="static">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header header-custom">
+                <button type="button" class="close" ng-click="hideModalInputLoket()" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Form Input Loket</h4>
+            </div>
+            <div class="modal-body">
+                <form name="formLoket">
+                    <div class="form-horizontal">
+                        <div class="form-group" ng-class="{'has-error':formLoket.nomorLoket.$invalid, 'has-success':formLoket.nomorLoket.$valid}">
+                            <div class="col-sm-4">
+                                <label for="nomorLoket" class="control-label">Nomor Loket</label>
+                            </div>
+                            <div class="col-sm-8">
+                                <input name="nomorLoket" type="number" class="form-control" ng-model="currentLoket.nomorLoket" required />
+                                <span style="float:right; color:white" class="help-block label label-danger" ng-show="validateNumber">Loket Number Already Exist</span>
+                            </div>
+                        </div>
+                        <div class="form-group" ng-class="{'has-error':formLoket.kategori.$invalid, 'has-success':formLoket.kategori.$valid}">
+                            <div class="col-sm-4">
+                                <label for="name" class="control-label">Kategori</label>
+                            </div>
+                            <div class="col-sm-8">
+                                <ui-select tagging="tagTransform" name="kategori" ng-model="currentLoket.kategori" theme="bootstrap" title="Choose a Kategori"
+                                    ng-required="true">
+                                    <ui-select-match class="ui-select-match" placeholder="Select Kategori...">{{$select.selected.code}} - {{$select.selected.name}}</ui-select-match>
+                                    <ui-select-choices class="ui-select-choices" repeat="x in listCategory | propsFilter: {code: $select.search, name: $select.search}">
+                                        <div ng-bind-html="x.code + ' - ' +x.name | highlight: $select.search"></div>
+                                    </ui-select-choices>
+                                </ui-select>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-default" ng-click="hideModalInputLoket()">Cancel</button>
+                <button class="btn btn-primary" ng-click="save()" ng-disabled="formLoket.$invalid">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Confirm Delete -->
+<div class="modal fade bs-example-modal-sm" id="modalConfirmDelete" tabindex="-1" role="dialog" data-backdrop="static">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header header-custom">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Confirm Delete [{{numberDelete}}]</h4>
+            </div>
+            <div class="modal-body">
+                Are you sure ?
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-default" data-dismiss="modal">No</button>
+                <button class="btn btn-primary" ng-click="remove(idLoket)">Yes</button>
+            </div>
+        </div>
+    </div>
+</div>
