--- a/management-ui/yo/app/views/master/poli.html
+++ b/management-ui/yo/app/views/master/poli.html
@@ -24,7 +24,7 @@
                     <th>
                         Name
                     </th>
-                    <th class="col-sm-2 center">
+                    <th class="col-sm-2 text-center">
                         <button class="btn btn-success" ng-click="showModalInputPoli()" tooltip-placement="bottom" uib-tooltip="Add New Poli"><i class="glyphicon glyphicon-plus"></i></button>
                     </th>
                 </tr>
@@ -33,7 +33,7 @@
                 <tr ng-repeat="x in listPoli">
                     <td>{{x.code}}</td>
                     <td>{{x.name}}</td>
-                    <td class="col-xs-1 center">
+                    <td class="col-sm-2 text-center">
                         <a class="glyphicon glyphicon-edit" ng-click="edit(x)" tooltip-placement="bottom" uib-tooltip="Edit {{x.name}}"></a>
                         <a class="glyphicon glyphicon-remove" ng-click="showDialogDelete(x)" tooltip-placement="bottom" uib-tooltip="Delete {{x.name}}"></a>
                     </td>
