tambah data kategory, poli dan dokter

--- a/management-ui/yo/app/views/generate/kuota.html
+++ b/management-ui/yo/app/views/generate/kuota.html
@@ -6,3 +6,18 @@
         </ul>
     </div>
 </div>
+
+<div class="row">
+    <div class="container">
+        <center>
+            <uib-alert type="{{typeAlert}}" ng-show="alert">{{messageAlert}}</uib-alert>
+        </center>
+    </div>
+</div>
+<div class="row">
+    <div class="container">
+            <div class="well">
+                <button style="width:100%" type="button" ng-disabled="generateDisabled" class="btn btn-primary" ng-click="generate()">Generate Kuota</button>
+            </div>
+    </div>
+</div>
