--- a/management-ui/yo/app/views/master/dokter.html
+++ b/management-ui/yo/app/views/master/dokter.html
@@ -2,7 +2,7 @@
     <div class="container">
         <ul class="breadcrumb">
             <li><span style="color: orangered;">Master</span></li>
-            <li class="active">Dokter</li>
+            <li class="active">Jadwal Dokter</li>
         </ul>
     </div>
 </div>
@@ -19,7 +19,7 @@
             <thead class="header-custom">
                 <tr>
                     <th>
-                        NIP
+                        Code
                     </th>
                     <th>
                         Name
@@ -34,7 +34,7 @@
             </thead>
             <tbody>
                 <tr ng-repeat="x in listDokter">
-                    <td>{{x.nip}}</td>
+                    <td>{{x.code}}</td>
                     <td>{{x.name}}</td>
                     <td>{{x.poli.code}} - {{x.poli.name}}</td>
                     <td class="col-sm-2 text-center">
@@ -66,13 +66,13 @@
             <div class="modal-body">
                 <form name="formDokter">
                     <div class="form-horizontal">
-                        <div class="form-group" ng-class="{'has-error':formDokter.nip.$invalid, 'has-success':formDokter.nip.$valid}">
+                        <div class="form-group" ng-class="{'has-error':formDokter.code.$invalid, 'has-success':formDokter.code.$valid}">
                             <div class="col-sm-4">
-                                <label for="nip" class="control-label">NIP</label>
+                                <label for="code" class="control-label">Code</label>
                             </div>
                             <div class="col-sm-8">
-                                <input name="nip" type="text" class="form-control" ng-model="currentDokter.nip" required />
-                                <span style="float:right; color:white" class="help-block label label-danger" ng-show="validateNIP">NIP Already Exist</span>
+                                <input name="code" type="text" class="form-control" ng-model="currentDokter.code" required />
+                                <span style="float:right; color:white" class="help-block label label-danger" ng-show="validateCode">Code Already Exist</span>
                             </div>
                         </div>
                         <div class="form-group" ng-class="{'has-error':formDokter.name.$invalid, 'has-success':formDokter.name.$valid}">
@@ -81,6 +81,14 @@
                             </div>
                             <div class="col-sm-8">
                                 <input name="name" type="text" class="form-control" ng-model="currentDokter.name" required />
+                             </div>
+                        </div>
+                        <div class="form-group" ng-class="{'has-error':formDokter.description.$invalid, 'has-success':formDokter.description.$valid}">
+                            <div class="col-sm-4">
+                                <label for="description" class="control-label">Description</label>
+                            </div>
+                            <div class="col-sm-8">
+                                <textarea name="description" class="form-control" ng-model="currentDokter.description" required></textarea>
                              </div>
                         </div>
                         <div class="form-group" ng-class="{'has-error':formDokter.poli.$invalid, 'has-success':formDokter.poli.$valid}">
@@ -170,7 +178,7 @@
         <div class="modal-content">
             <div class="modal-header header-custom">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Confirm Delete [{{nipDelete}}]</h4>
+                <h4 class="modal-title">Confirm Delete [{{codeDelete}}]</h4>
             </div>
             <div class="modal-body">
                 Are you sure ?
