--- a/management-ui/yo/app/views/screen/tv.html
+++ b/management-ui/yo/app/views/screen/tv.html
@@ -7,7 +7,7 @@
             <div class="panel-body">
                 <div class="col-sm-6" ng-repeat="y in x.loket" style="padding-bottom:1em">
                     <button type="button" class="btn btn-success" style="width:100%;font-weight:400;font-size:24px">Loket [{{y.nomorLoket}}]</button>
-                    <span class="btn btn-default" style="width:100%;height:120px;font-weight:600;font-size:46px">F001</span>
+                    <span class="btn btn-default" style="width:100%;height:120px;font-weight:600;font-size:40px">{{antrian[y.nomorLoket].nomorAntrian | limitTo:4}}</span>
                 </div>
             </div>
         </div>
